--- a/index.htm
+++ b/index.htm
@@ -3,66 +3,51 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>لعبة الذاكرة | تحدي الفواكه</title>
-    <link href="https://fonts.googleapis.com/css2?family=Tajawal:wght@400;700;900&display=swap" rel="stylesheet">
+    <title>لعبة ذاكرة الفواكه</title>
+    <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;700;900&display=swap" rel="stylesheet">
     <style>
-        :root { --main: #6c5ce7; --bg: #f0f3f7; --card: #2d3436; }
-        body { font-family: 'Tajawal', sans-serif; background: var(--bg); margin: 0; display: flex; justify-content: center; align-items: center; min-height: 100vh; }
-        .container { background: white; width: 90%; max-width: 450px; padding: 25px; border-radius: 25px; box-shadow: 0 15px 35px rgba(0,0,0,0.1); text-align: center; }
+        :root { --primary: #6c5ce7; --bg: #f8f9fa; --card: #2d3436; }
+        body { font-family: 'Cairo', sans-serif; background: var(--bg); margin: 0; display: flex; justify-content: center; align-items: center; min-height: 100vh; }
+        .app-container { background: white; width: 95%; max-width: 450px; padding: 25px; border-radius: 25px; box-shadow: 0 15px 35px rgba(0,0,0,0.1); text-align: center; }
         .screen { display: none; }
         .active { display: block; }
-        h1 { color: var(--main); margin-bottom: 20px; }
         input { width: 100%; padding: 12px; margin: 8px 0; border: 2px solid #eee; border-radius: 12px; box-sizing: border-box; outline: none; }
-        input:focus { border-color: var(--main); }
-        button { width: 100%; padding: 14px; background: var(--main); color: white; border: none; border-radius: 12px; font-weight: bold; cursor: pointer; transition: 0.3s; margin-top: 10px; }
-        button:hover { transform: scale(1.02); background: #5b4bc4; }
+        button { width: 100%; padding: 14px; background: var(--primary); color: white; border: none; border-radius: 12px; font-weight: bold; cursor: pointer; transition: 0.3s; margin-top: 10px; }
         .grid { display: grid; grid-template-columns: repeat(4, 1fr); gap: 10px; margin: 20px 0; }
-        .card { height: 70px; background: var(--card); border-radius: 12px; cursor: pointer; display: flex; justify-content: center; align-items: center; font-size: 2rem; color: transparent; transition: 0.4s; }
-        .card.flipped { background: white; border: 2px solid var(--main); color: initial; transform: rotateY(180deg); }
-        .card.matched { background: #00b894; border-color: #00b894; cursor: default; }
-        .stats { display: flex; justify-content: space-between; font-weight: bold; margin-bottom: 10px; color: #636e72; }
-        .leaderboard { margin-top: 20px; background: #f8f9fa; padding: 15px; border-radius: 15px; text-align: right; }
-        li { display: flex; justify-content: space-between; padding: 5px 0; border-bottom: 1px solid #eee; font-size: 0.9rem; }
-        #error-txt { color: red; font-size: 0.8rem; margin-top: 10px; }
+        .card { height: 75px; background: var(--card); border-radius: 12px; cursor: pointer; display: flex; justify-content: center; align-items: center; font-size: 2rem; color: transparent; transition: 0.4s; transform-style: preserve-3d; }
+        .card.flipped { background: white; border: 2px solid var(--primary); color: initial; transform: rotateY(180deg); }
+        .card.matched { background: #00b894; border-color: #00b894; cursor: default; opacity: 0.8; }
+        .stats { display: flex; justify-content: space-between; font-weight: bold; margin-bottom: 15px; background: #eee; padding: 10px; border-radius: 10px; }
     </style>
 </head>
 <body>
 
-<div class="container">
+<div class="app-container">
     <div id="auth-screen" class="screen active">
         <h1>🍓 ذاكرة الفواكه</h1>
+        <input type="text" id="username" placeholder="اسم اللاعب">
         <input type="email" id="email" placeholder="البريد الإلكتروني">
         <input type="password" id="password" placeholder="كلمة المرور">
-        <div id="reg-box" style="display:none;"><input type="text" id="username" placeholder="اسم اللاعب"></div>
-        <button id="auth-btn" onclick="handleAuth()">دخول</button>
-        <button style="background:none; color:var(--main); text-decoration:underline; font-size:0.8rem;" onclick="toggleAuth()">تبديل (دخول / إنشاء حساب)</button>
-        <p id="error-txt"></p>
+        <button onclick="handleAuth()">إنشاء حساب والبدء</button>
+        <p id="auth-error" style="color:red; font-size:0.8rem;"></p>
     </div>
 
     <div id="game-screen" class="screen">
         <div class="stats">
-            <div>اللاعب: <span id="p-name" style="color:var(--main)"></span></div>
-            <button onclick="logout()" style="width:auto; padding:5px; background:#ff7675; font-size:0.7rem;">خروج</button>
+            <div>👤 <span id="p-name"></span></div>
+            <div>⏱️ <span id="timer">0</span>ث</div>
+            <button onclick="logout()" style="width:auto; margin:0; padding:5px 10px; background:#ff7675; font-size:0.7rem;">خروج</button>
         </div>
-        <div class="stats">
-            <div>⏱️ <span id="timer">0</span> ث</div>
-            <div>🔄 حركات: <span id="moves">0</span></div>
-        </div>
-        <div class="grid" id="grid"></div>
-        <button onclick="startGame()">ابدأ اللعب</button>
-        <div class="leaderboard">
-            <h3>🏆 المتصدرون</h3>
-            <ul id="leader-list"></ul>
-        </div>
+        <div class="grid" id="game-grid"></div>
+        <button id="start-btn" onclick="startGame()">ابدأ اللعب (كشف 3 ثواني)</button>
     </div>
 </div>
 
 <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app-compat.js"></script>
 <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-auth-compat.js"></script>
-<script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-firestore-compat.js"></script>
 
 <script>
-    // بياناتك الحقيقية من الصورة (الصورة 4)
+    // بياناتك الخاصة من الكود الذي أرسلتيه
     const firebaseConfig = {
       apiKey: "AIzaSyCb7HtlR_2epwO-cbHk8Y2GDIW5x7jqhy4",
       authDomain: "enter-you-pas.firebaseapp.com",
@@ -75,66 +60,59 @@
 
     firebase.initializeApp(firebaseConfig);
     const auth = firebase.auth();
-    const db = firebase.firestore();
 
-    let isLogin = true;
-    function toggleAuth() {
-        isLogin = !isLogin;
-        document.getElementById('reg-box').style.display = isLogin ? 'none' : 'block';
-        document.getElementById('auth-btn').innerText = isLogin ? 'دخول' : 'إنشاء حساب';
-    }
-
+    // نظام التسجيل
     async function handleAuth() {
         const e = document.getElementById('email').value;
         const p = document.getElementById('password').value;
         const u = document.getElementById('username').value;
-        const err = document.getElementById('error-txt');
         try {
-            if (isLogin) { await auth.signInWithEmailAndPassword(e, p); }
-            else { 
-                const res = await auth.createUserWithEmailAndPassword(e, p);
-                await res.user.updateProfile({ displayName: u });
-                alert("تم إنشاء الحساب! سجل دخولك الآن.");
-                location.reload();
-            }
-        } catch (m) { err.innerText = m.message; }
+            const res = await auth.createUserWithEmailAndPassword(e, p);
+            await res.user.updateProfile({ displayName: u });
+            alert("تم التسجيل بنجاح!");
+        } catch (err) { document.getElementById('auth-error').innerText = err.message; }
     }
 
+    // مراقبة الدخول
     auth.onAuthStateChanged(user => {
         if (user) {
             document.getElementById('auth-screen').classList.remove('active');
             document.getElementById('game-screen').classList.add('active');
-            document.getElementById('p-name').innerText = user.displayName || user.email;
-            loadLeaders();
+            document.getElementById('p-name').innerText = user.displayName;
+        } else {
+            document.getElementById('auth-screen').classList.add('active');
+            document.getElementById('game-screen').classList.remove('active');
         }
     });
 
-    function logout() { auth.signOut(); location.reload(); }
+    function logout() { auth.signOut(); }
 
-    // اللعبة
+    // --- منطق اللعبة ---
     const icons = ['🍎', '🍌', '🍇', '🍉', '🍒', '🍓', '🍍', '🥝'];
-    let flipped = [], moves = 0, matches = 0, seconds = 0, timer;
+    let flipped = [], matches = 0, seconds = 0, timer;
 
     function startGame() {
-        clearInterval(timer); moves=0; matches=0; seconds=0;
-        document.getElementById('moves').innerText = '0';
+        clearInterval(timer); seconds = 0; matches = 0; flipped = [];
         document.getElementById('timer').innerText = '0';
-        const grid = document.getElementById('grid');
+        const grid = document.getElementById('game-grid');
         grid.innerHTML = '';
+
         let cards = [...icons, ...icons].sort(() => Math.random() - 0.5);
         cards.forEach(icon => {
             const card = document.createElement('div');
-            card.className = 'card flipped'; card.dataset.icon = icon; card.innerText = icon;
+            card.className = 'card flipped';
+            card.dataset.icon = icon;
+            card.innerText = icon;
             card.onclick = () => {
                 if (flipped.length < 2 && !card.classList.contains('flipped')) {
-                    card.classList.add('flipped'); card.innerText = card.dataset.icon;
+                    card.classList.add('flipped');
+                    card.innerText = card.dataset.icon;
                     flipped.push(card);
                     if (flipped.length === 2) {
-                        moves++; document.getElementById('moves').innerText = moves;
                         if (flipped[0].dataset.icon === flipped[1].dataset.icon) {
                             flipped.forEach(c => c.classList.add('matched'));
                             flipped = []; matches++;
-                            if (matches === icons.length) win();
+                            if (matches === icons.length) { clearInterval(timer); alert("مبروك فزت!"); }
                         } else {
                             setTimeout(() => { flipped.forEach(c => {c.classList.remove('flipped'); c.innerText='';}); flipped=[]; }, 800);
                         }
@@ -143,31 +121,12 @@
             };
             grid.appendChild(card);
         });
-        setTimeout(() => { 
+
+        // إخفاء الكروت بعد 3 ثواني وبدء الوقت
+        setTimeout(() => {
             document.querySelectorAll('.card').forEach(c => { c.classList.remove('flipped'); c.innerText=''; });
             timer = setInterval(() => { seconds++; document.getElementById('timer').innerText = seconds; }, 1000);
         }, 3000);
-    }
-
-    async function win() {
-        clearInterval(timer);
-        const score = Math.max(1000 - (seconds * 5) - (moves * 10), 50);
-        alert("فزت! نقاطك: " + score);
-        await db.collection('leaderboard').add({
-            name: auth.currentUser.displayName || "لاعب",
-            score: score,
-            timestamp: firebase.firestore.FieldValue.serverTimestamp()
-        });
-        loadLeaders();
-    }
-
-    async function loadLeaders() {
-        const list = document.getElementById('leader-list');
-        const snap = await db.collection('leaderboard').orderBy('score', 'desc').limit(5).get();
-        list.innerHTML = '';
-        snap.forEach(doc => {
-            list.innerHTML += `<li><span>👤 ${doc.data().name}</span> <b>${doc.data().score}</b></li>`;
-        });
     }
 </script>
 </body>
